crates/courier-ftp-proto/tests/snapshots/snapshots__rotate_commit.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&RotateRequest::Commit\n{\n    wrapped_keys:\n    vec![RotationGrant\n    {\n        user: id(8), wrapped: vec![1, 2, 3], signature: vec![4, 5, 6],\n        permission: Permission::Read,\n    }],\n})"
---
{
  "action": "commit",
  "wrapped_keys": [
    {
      "user": "0192f0c4-7a10-7c3e-9a55-0f6b2c1d3e08",
      "wrapped": "AQID",
      "signature": "BAUG",
      "permission": "read"
    }
  ]
}
