crates/courier-ftp-proto/tests/snapshots/snapshots__rotate_upload.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&RotateRequest::Upload\n{ items: vec![RotatedItem { id: id(1), envelope: vec![1, 2], }], })"
---
{
  "action": "upload",
  "items": [
    {
      "id": "0192f0c4-7a10-7c3e-9a55-0f6b2c1d3e01",
      "envelope": "AQI"
    }
  ]
}
