crates/courier-ftp-proto/tests/snapshots/snapshots__totp_request.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&TotpRequest { code: Some(\"123456\".into()), })"
---
{
  "code": "123456"
}
