crates/courier-ftp-proto/tests/snapshots/snapshots__totp_request_empty.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&TotpRequest::default())"
---
{}
