crates/courier-ftp-proto/tests/snapshots/snapshots__totp_status.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&TotpStatus { enabled: true })"
---
{
  "enabled": true
}
