crates/courier-ftp-proto/tests/snapshots/snapshots__update_member_request.snap
---
source: crates/courier-ftp-proto/tests/snapshots.rs
expression: "json(&UpdateMemberRequest { role: Role::Admin })"
---
{
  "role": "admin"
}
